2016-09-27 Andrii Vebytskyi <andrii.verbytskyi@mpp.mpg.de>
	* Tests are working
  --------------------------  HepMC2.07-beta00  --------------------------
2016-09-06 Andrii Vebytskyi <andrii.verbytskyi@mpp.mpg.de>
	* Attepms to provide compatibility with 2.06
	* Add publication reference in CPC.
	* Small fixes in examples.

2016-09-01 Andrii Vebytskyi <andrii.verbytskyi@mpp.mpg.de>

	* Make examples working with recent Pythia8 and Herwig6.
	Fix compiller warnings. Fix some tests. Fix configure scripts.
	Small fix to IO_AsciiParticles. Implements fixes from EPEL 2.06 version.

2015-05-08  Andy Buckley  <andy.buckley@cern.ch>

	* Make sure that all macros in HepMCDefs.h have a numerical value
	(thanks to Marek Schoenherr for the heads-up).

2015-04-03  Andy Buckley  <andy.buckley@cern.ch>

	* Adding weight and weight names accessors to GenEvent, for
	forward compatibility.

2015-04-02  Andy Buckley  <andy.buckley@cern.ch>

	* IO_GenEvent.cc: Remove unnecessary copying of the *whole*
	GenEvent during write, since a reference is just fine!

2015-03-27  Andy Buckley  <andy.buckley@cern.ch>

	* Adding forward compatibility typedefs GenEventPtr, GenParticlePtr and GenVertexPtr.

	* Providing HEPMC_VERSION_CODE integer macro for preprocessed version requirements.

	* Adding HEPMC_HAS_CONSISTENT_CONST and HEPMC_HAS_SIMPLE_RANGE macros.

2015-02-15  Andy Buckley  <andy.buckley@cern.ch>

	* Make GenVertex::status() the canonical form, with id() as the alias.

	* HEPMC_HAS_NAMED_WEIGHTS #define changed from implicit value 1 to
	explict value 2, to allow detection of new capabilities.

2015-01-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding forward-compatibility GenWeights, GenPdfInfo, and GenHeavyIon typedef aliases.

	* Restructuring WeightContainer to work as intended -- weight names are now queryable.

2014-11-25  Andy Buckley  <andy.buckley@cern.ch>

	* Improving IO_AsciiParticles usability -- can now write to non-file streams.
